Fix alignment of input items on settings page

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -143,3 +143,9 @@ textarea {
     border-bottom-right-radius:3px;
   }
 }
+
+.settings {
+  input {
+    text-align: end
+  }
+}
